# mlops-project-classification

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  model_train.ipynb  pyproject.toml  run_id.txt
.github/workflows/: ci.yaml
Docs/: code_refactoring.md  dependency-management.md  docker-compose.md  experiment-tracking-mlflow.md
config/: config.yaml
src/: data_prep.py  inference.py  train.py  utils.py
tests/: test_data_prep.py  test_inference.py  test_train_script.py
